working on the structure of page option
